--- a/ECommerce/ECommerce/Pages/Account/ProfilePage.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/ProfilePage.cshtml
@@ -20,7 +20,11 @@
                     <div class="content-panel">
                         <form class="form-horizontal" method="post">
                             <fieldset class="fieldset">
-                                <h3 class="fieldset-title">Personal Info</h3>
+                                <div id="order-history-link">
+                                    <h3 class="fieldset-title">Personal Info</h3>
+                                    <a asp-page="/Account/OrderHistory" class="nav-link">Orders</a>
+                                </div>
+
                                 <div class="form-group">
                                     <div class="col-md-10 col-sm-9 col-xs-12">
                                         <input hidden type="text" asp-for="@Model.AppUsers.Email" class="form-control">
@@ -127,7 +131,7 @@
                             <hr>
                             <div class="form-group">
                                 <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-                                    <button type="submit">Update Profile</button>
+                                    <button type="submit" class="btn btn-primary">Update Profile</button>
                                 </div>
                             </div>
                         </form>
