--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -25,13 +25,13 @@
 <body>
     <main>
         <img src="~/Images/header-2.jpg" />
-        <section class="pt-5 pb-5">
+        <section id="featured-products" class="pt-5 pb-5">
             <div class="container">
                 <h2 class="text-center font-weight-bold mb-5 mt-5">Featured Products</h2>
                 <div class="row d-flex equal">
                     @for (int i = 4; i < 7; i++)
                     {
-                        <div class="  col-md-4 mb-4">
+                        <div class="col-md-4 mb-4">
                             <div class="card h-100 border-0">
                                 <div class="card-img-top">
                                     <img src=@Model.Products[i].Image class="img-fluid mx-auto d-block" alt=@Model.Products[i].Name>
