--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -10,35 +10,13 @@
 <html>
 <head>
     <script src="https://use.fontawesome.com/c560c025cf.js"></script>
-    <style>
-        main {
-            margin-bottom: 150px;
-        }
-
-        .plus-minus {
-            display: inline-flex;
-        }
-
-        #bootstrap-override .delete-button {
-            @*float: right;*@
-        }
-
-        #bootstrap-override .update-field div {
-            @*display: inline-flex;*@
-        }
-
-        input[type=number]::-webkit-inner-spin-button,
-        input[type=number]::-webkit-outer-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="~/Styles/ShoppingCart.css" />
     <title>Shopping Cart</title>
 </head>
 <body>
     <main id="products-main">
         <div class="container">
-            <div class="card shopping-cart">
+            <div class="card shopping-cart ">
                 <div class="card-header bg-dark text-light">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                     Your Cart
@@ -54,8 +32,8 @@
                             {
 
                                 <div class="row">
-                                    <div class="col-12 col-sm-12 col-md-2 text-center">
-                                        <img class="img-responsive" src=@item.Product.Image alt="prewiew" width="120" height="80">
+                                    <div class="img col-12 col-sm-12 col-md-2 text-center">
+                                        <img class="img-responsive" src=@item.Product.Image alt="preview" width="120" height="80">
                                     </div>
                                     <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
                                         <h4 class="product-name"><strong>@item.Product.Name</strong> (@item.Quantity)</h4>
@@ -69,6 +47,7 @@
                                             <h6><strong>@string.Format("{0:C}", item.Product.Price)<span class="text-muted">x</span></strong></h6>
                                         </div>
                                         <form method="post" class="update-field">
+
                                             <div class="col-4 col-sm-4 col-md-4">
                                                 <div class="plus-minus quantity">
 
