--- a/ECommerce/ECommerce/Pages/Products/ProductDetails.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/ProductDetails.cshtml
@@ -28,12 +28,10 @@
                 <div class="col-md-6 mb-4">
 
                     <!--Content-->
-                    <div class="p-4">
+                    <div class=".align-items-start p-4">
 
                         <div class="mb-3">
-                            <a href="">
-                                <span class="badge blue mr-1">@Model.Product.Name</span>
-                            </a>
+                            <h3>@Model.Product.Name</h3>
                         </div>
                         <p class="badge mr-1">Stock: @Model.Product.Stock</p>
 
