--- a/ECommerce/ECommerce/Pages/Account/OrderDetails.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/OrderDetails.cshtml
@@ -1,25 +1,27 @@
 ﻿@page
-@model ECommerce.Pages.Checkout.OrderSummaryModel
+@model ECommerce.Pages.Account.OrderDetailsModel
 @{
-    ViewData["Title"] = "OrderSummary";
+    ViewData["Title"] = "OrderDetails";
     Layout = "_Layout";
 }
 
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Invoice</title>
+    <title>Order Details</title>
 </head>
-
 <body>
-    <main id="products-main">
+    <main>
 
         <div class="container">
+            <div id="order-history-link">
+                <a asp-page="/Account/ProfilePage" class="nav-link">Profile</a>
+                <a asp-page="/Account/OrderHistory" class="nav-link">Orders</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     Invoice
                     <strong>@DateTime.Now.ToShortDateString()</strong>
-                    <span class="float-right"> <strong>Status:</strong> Pending</span>
                 </div>
                 <div class="card-body">
                     <div class="row mb-4">
@@ -53,24 +55,24 @@
                             </thead>
                             <tbody>
                                 @{
-                            int counter = 0;
-                            decimal total = 0.0M;
-                            foreach (var item in Model.Order.Cart.CartItem)
-                            {
-                                total += item.Product.Price * item.Quantity;
-                                counter++;
-                                    <tr>
-                                        <td class="center">@counter</td>
-                                        <td class="left">@item.Product.Name</td>
-                                        <td class="left">@item.Product.Description</td>
+                                    int counter = 0;
+                                    decimal total = 0.0M;
+                                    foreach (var item in Model.Order.Cart.CartItem)
+                                    {
+                                        total += item.Product.Price * item.Quantity;
+                                        counter++;
+                                        <tr>
+                                            <td class="center">@counter</td>
+                                            <td class="left">@item.Product.Name</td>
+                                            <td class="left">@item.Product.Description</td>
 
-                                        <td class="right">
-                                            @string.Format("{0:C}", item.Product.Price)
-                                        </td>
-                                        <td class="right">@item.Quantity</td>
-                                        <td>@string.Format("{0:C}", total)</td>
-                                    </tr>
-                            }
+                                            <td class="right">
+                                                @string.Format("{0:C}", item.Product.Price)
+                                            </td>
+                                            <td class="right">@item.Quantity</td>
+                                            <td>@string.Format("{0:C}", total)</td>
+                                        </tr>
+                                    }
                                 }
                             </tbody>
                         </table>
