--- a/ECommerce/ECommerce/Pages/Account/ProfilePage.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/ProfilePage.cshtml
@@ -7,12 +7,11 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <title></title>
+    <title>Profile</title>
 </head>
 <body>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <div class="container">
         <div class="view-account">
             <section class="module">
@@ -21,11 +20,12 @@
                         <form class="form-horizontal" method="post">
                             <fieldset class="fieldset">
                                 <div id="order-history-link">
-                                    <h3 class="fieldset-title">Personal Info</h3>
+                                    <a class="nav-link">Profile</a>
                                     <a asp-page="/Account/OrderHistory" class="nav-link">Orders</a>
                                 </div>
 
                                 <div class="form-group">
+                                    <h3 class="fieldset-title">Personal Info</h3>
                                     <div class="col-md-10 col-sm-9 col-xs-12">
                                         <input hidden type="text" asp-for="@Model.AppUsers.Email" class="form-control">
                                     </div>
