--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -35,7 +35,7 @@
 </head>
 <body>
     <main>
-        <img src="~/Images/header-2.jpg" />
+        <img class="img-fluid" src="~/Images/header-2.jpg" />
         <section id="featured-products" class="pt-5 pb-5">
             <div class="container">
                 <h2 class="spotlight text-center font-weight-bold mb-5 mt-5">Spot <span>Light</span></h2>
