--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -45,7 +45,7 @@
                         <div class="col-md-4 mb-4">
                             <div class="feature card h-100 border-0">
                                 <div class="card-img-top">
-                                    <img src=@Model.Products[i].Image class="img-fluid mx-auto d-block" alt=@Model.Products[i].Name>
+                                    <img src="~/Images/@Model.Products[i].Image" class="img-fluid mx-auto d-block" alt=@Model.Products[i].Name>
                                 </div>
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
