--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -33,7 +33,7 @@
 
                                 <div class="row">
                                     <div class="img col-12 col-sm-12 col-md-2 text-center">
-                                        <img class="img-responsive" src=@item.Product.Image alt="preview" width="120" height="80">
+                                        <img class="img-responsive" src="~Images/@item.Product.Image" alt="preview" width="120" height="80">
                                     </div>
                                     <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
                                         <h4 class="product-name"><strong>@item.Product.Name</strong> (@item.Quantity)</h4>
