--- a/ECommerce/ECommerce/Pages/Shared/Components/ShoppingCart/Default.cshtml
+++ b/ECommerce/ECommerce/Pages/Shared/Components/ShoppingCart/Default.cshtml
@@ -32,7 +32,7 @@
                                 <small class="text-muted">(@item.Quantity)</small>
                             </h6>
                         </div>
-                        <span class="text-muted">@string.Format("{0:C}", itemTotal)</span>
+                        <span class="text-muted">@string.Format(new System.Globalization.CultureInfo("en-US"), "{0:c}", itemTotal)</span>
                     </li>
 
                 }
