--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -53,7 +53,7 @@
                                     </h4>
                                     <h5 class="card-price medium">
                                         <i>
-                                            @string.Format("{0:C}", Model.Products[i].Price)
+                                            @string.Format(new System.Globalization.CultureInfo("en-US"), "{0:c}", Model.Products[i].Price)
                                         </i>
                                     </h5>
                                     <small class="card-price small">
