--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -44,7 +44,7 @@
                                     <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
 
                                         <div class="col-3 col-sm-3 col-md-6 text-md-right" style="padding-top: 5px">
-                                            <h6><strong>@string.Format("{0:C}", item.Product.Price)<span class="text-muted">x</span></strong></h6>
+                                            <h6><strong>@string.Format(new System.Globalization.CultureInfo("en-US"), "{0:c}", item.Product.Price)<span class="text-muted">x</span></strong></h6>
                                         </div>
                                         <form method="post" class="update-field">
 
