--- a/ECommerce/ECommerce/Pages/Account/OrderHistory.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/OrderHistory.cshtml
@@ -41,7 +41,7 @@
                                 <tr>
                                     <th scope="row">@order.Id</th>
                                     <td>@order.City, @order.State</td>
-                                    <td>@string.Format("{0:C}", order.Cart.Total)</td>
+                                    <td>@string.Format(new System.Globalization.CultureInfo("en-US"), "{0:c}", order.Cart.Total)</td>
                                     <td>@items</td>
                                     <td>@order.OrderDate.ToShortDateString()</td>
                                     <td scope="col"><a asp-page="/Account/OrderDetails" asp-route-id="@order.Id">Details</a></td>
