--- a/ECommerce/ECommerce/Pages/Products/ProductDetails.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/ProductDetails.cshtml
@@ -21,7 +21,7 @@
                 <!--Grid column-->
                 <div class="col-md-6 mb-4">
 
-                    <img src="~Images/@Model.Product.Image" class="img-fluid" alt="">
+                    <img src="~/Images/@Model.Product.Image" class="img-fluid" alt="">
                 </div>
                 <!--Grid column-->
                 <!--Grid column-->
