--- a/ECommerce/ECommerce/Pages/Shared/Components/ShoppingCart/Default.cshtml
+++ b/ECommerce/ECommerce/Pages/Shared/Components/ShoppingCart/Default.cshtml
@@ -38,7 +38,7 @@
                 }
                 <li class="list-group-item d-flex justify-content-between">
                     <span>Total</span>
-                    <strong>@string.Format("{0:C}", Model.Total)</strong>
+                    <strong>@string.Format(new System.Globalization.CultureInfo("en-US"), "{0:c}", Model.Total)</strong>
                 </li>
             }
         }
